add floating ball

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="notification_back_to_home_title">Back to home</string>
     <string name="notification_back_to_home_content">Click Notification to back to home</string>
 
+    <string name="service_start_floating_ball_description">Start Floating Ball</string>
 </resources>
