--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,12 @@
     <string name="setting_enable_floating_ball_title">Floating Ball</string>
     <string name="setting_enable_floating_ball_summary">Enable or disable floating ball</string>
 
+    <string name="setting_group_system">System Settings</string>
+    <string name="setting_accessibility_title">Accessibility Setting</string>
+    <string name="setting_input_method_title">Input Method Setting</string>
+    <string name="setting_device_manager_title">Device Manager</string>
+    <string name="setting_app_manager_title">Application Manager</string>
+
     <string name="notification_channel_intent_id">intent</string>
     <string name="notification_channel_intent_name">Intent Notification</string>
 
