--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,4 +15,7 @@
     <string name="notification_back_to_home_title">返回桌面</string>
     <string name="notification_back_to_home_content">点击通知返回桌面</string>
     <string name="service_start_floating_ball_description">开启悬浮球</string>
+    <string name="setting_wireless_title">网络设置</string>
+    <string name="setting_date_title">时间和日期设置</string>
+    <string name="setting_display_title">显示设置</string>
 </resources>
