--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,5 @@
     <string name="notification_back_to_home_title">Back to home</string>
     <string name="notification_back_to_home_content">Click Notification to back to home</string>
 
-    <string name="service_start_floating_ball_description">Start Floating Ball</string>
+    <string name="accessibility_service_floating_ball_description">Enable to use floating ball for back</string>
 </resources>
