--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="setting_enable_back_to_home_notification_summary">Enable Back to Home Notification</string>
     <string name="setting_enable_floating_ball_title">Floating Ball</string>
     <string name="setting_enable_floating_ball_summary">Enable or disable floating ball</string>
+    <string name="setting_enable_aod_title">Always on Display</string>
+    <string name="setting_enable_aod_summary">Enable or disable always on display</string>
 
     <string name="setting_group_system">System Settings</string>
     <string name="setting_wireless_title">Wireless Setting</string>
