--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -19,6 +19,8 @@
     <string name="setting_date_title">时间和日期设置</string>
     <string name="setting_display_title">显示设置</string>
     <string name="setting_enable_aod_title">熄屏常显</string>
-    <string name="setting_enable_aod_summary">开启或关闭熄屏常显功能，熄屏常显状态双击屏幕返回桌面</string>
+    <string name="setting_enable_aod_summary">开启或关闭熄屏常显功能，熄屏常显状态双击屏幕返回桌面，熄屏常显可能会加快耗电</string>
     <string name="toast_aod_double_click_to_back_to_home">双击屏幕返回桌面</string>
+    <string name="setting_aod_landscape_title">熄屏常显横屏</string>
+    <string name="setting_aod_landscape_summary">熄屏常显时，将屏幕设置为横屏</string>
 </resources>
